--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 						<li><a class="google" href="#"><i class="fa fa-google-plus"></i></a></li>
 						<li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
 					</ul>
-					<p>Copyright © 2015 Your Company Name | Design By wamastudio</p>
+					<p>Copyright © 2021 AbibasITCompany for GoITeens Web Studio</p>
 				</div>
 			</div>
 		</footer>
