--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
 						<div class="title-section">
-							<h2>Features of Wonal</h2>
+							<h2>Features </h2>
 							<p class="text-muted">Lorem ipsum dolor sit amet, consectetuer adipiscing elit sed diam nonummy nibh euismod tincidunt ut.</p>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<iframe width="1200" height="800" src="https://www.youtube.com/embed/DkaUsBwe0fo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/0u4tRF9u6j4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<div class="col-md-4">
 						<div class="benefits text-right">
 							
