--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
 						<div class="title-section">
-							<h2>Features </h2>
-							<p class="text-muted">Lorem ipsum dolor sit amet, consectetuer adipiscing elit sed diam nonummy nibh euismod tincidunt ut.</p>
+							<h2>Our Presentation</h2>
+							<p class="text-muted"></p>
 						</div>
 					</div>
 				</div>
 				<div class="row">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/0u4tRF9u6j4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="1200" height="800" src="https://www.youtube.com/embed/0u4tRF9u6j4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<div class="col-md-4">
 						<div class="benefits text-right">
 							
@@ -166,7 +166,7 @@
 					<div class="col-md-6 col-md-offset-3">
 						<div class="title-section">
 							<h2>Our Pricing</h2>
-							<p class="text-muted">Lorem ipsum dolor sit amet, consectetuer adipiscing elit sed diam nonummy nibh euismod tincidunt ut. </p>
+							<p class="text-muted"></p>
 						</div>
 					</div>
 				</div>
@@ -174,15 +174,15 @@
 					<div class="col-md-4">
 						<div class="pricing text-uppercase">
 							<div class="pricing-title">
-								<h4>Basic Plan</h4>
-								<p>$10</p>
+								<h4>Basic</h4>
+								<p>$59</p>
 								<small class="text-lowercase">monthly</small>
 							</div>
 							<ul>
-								<li>2 GB Space</li>
-								<li>200 GB Bandwidth</li>
-								<li>20 More Themes</li>
-								<li>Lifetime Support</li>
+								<li>Up to 5 users</li>
+								<li>Max 200 objects/monch</li>
+								<li>Unlimited queries</li>
+								<li>Unlimited analytics</li>
 							</ul>
 							<button class="btn btn-primary btn-xl">Purchase Now</button>
 						</div>
@@ -190,15 +190,15 @@
 					<div class="col-md-4">
 						<div class="pricing active text-uppercase">
 							<div class="pricing-title">
-								<h4>Business Plan</h4>
-								<p>$20</p>
+								<h4>Optimum</h4>
+								<p>$99</p>
 								<small class="text-lowercase">monthly</small>
 							</div>
 							<ul>
-								<li>5 GB space</li>
-								<li>500 GB Bandwidth</li>
-								<li>50 More Themes</li>
-								<li>Lifetime Support</li>
+								<li>Up to 15 users</li>
+								<li>Max 400 objects/monch</li>
+								<li>Unlimited queries</li>
+								<li>Unlimited analytics</li>
 							</ul>
 							<button class="btn btn-primary btn-xl">Purchase Now</button>
 						</div>
@@ -206,15 +206,15 @@
 					<div class="col-md-4">
 						<div class="pricing text-uppercase">
 							<div class="pricing-title">
-								<h4>Pro Plan</h4>
-								<p>$30</p>
+								<h4>Full</h4>
+								<p>$149</p>
 								<small class="text-lowercase">monthly</small>
 							</div>
 							<ul>
-								<li>10 GB space</li>
-								<li>1,000 GB bandwidth</li>
-								<li>100 more themes</li>
-								<li>Lifetime Support</li>
+								<li>Up to 50 users</li>
+								<li>Unlimited objects</li>
+								<li>Unlimited queries</li>
+								<li>Unlimited analytics</li>
 							</ul>
 							<button class="btn btn-primary btn-xl">Purchase Now</button>
 						</div>
@@ -229,7 +229,7 @@
 						<div class="col-md-6 col-md-offset-3">
 							<div class="title-section">
 								<h2>Subscribe us</h2>
-								<p class="text-muted">Lorem ipsum dolor sit amet, consectetuer adipiscing elit sed diam nonummy nibh euismod tincidunt ut.</p>
+								<p class="text-muted"></p>
 							</div>
 						</div>
 					</div>
