--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 							<a class="page-scroll" href="#services">Services</a>
 						</li>
 						<li>
-							<a class="page-scroll" href="#about">about</a>
+							<a class="page-scroll" href="#about">about us</a>
 						</li>
 						<li>
-							<a class="page-scroll" href="#screens">screenshots</a>
+							<a class="page-scroll" href="#screens">reviews</a>
 						</li>
 						<li>
 							<a class="page-scroll" href="#pricing">pricing</a>
@@ -110,7 +110,7 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
 						<div class="title-section">
-							<h2>Our Presentation</h2>
+							<h2>presentation of one of our projects</h2>
 							<p class="text-muted"></p>
 						</div>
 					</div>
@@ -228,7 +228,7 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3">
 							<div class="title-section">
-								<h2>Subscribe us</h2>
+								<h2>subscribe to our newsletter</h2>
 								<p class="text-muted"></p>
 							</div>
 						</div>
