--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3">
 						<div class="title-section">
-							<h2>presentation of one of our projects</h2>
+							<h2>Presentation of one of our projects</h2>
 							<p class="text-muted"></p>
 						</div>
 					</div>
